creating bitmap of entire mapview zoomed to show track run, completing calcluations necessary to create run object for database

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,10 @@
                 android:id="@+id/tvToolbarTitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Running App"
-                android:textSize="30sp"
+                android:text="Track My Run"
+                android:textSize="20sp"
                 android:textStyle="bold"
+                android:fontFamily="sans-serif"
                 android:gravity="center_vertical"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
