--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/runFragment"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_run"
         android:title="@string/title_run" />
 
     <item
         android:id="@+id/statsFragment"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_graph"
         android:title="@string/title_stat" />
 
     <item
         android:id="@+id/settingsFragment"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_settings"
         android:title="@string/title_setting" />
 
 <!--    <item
