--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,10 @@
     <color name="md_blue_A400">#2979FF</color>
     <color name="md_blue_A700">#2962FF</color>
     <color name="colorAccent">#FFE600</color>
-    <color name="errorColor">#D50000</color>
+    <color name="errorColor">#A80202</color>
+
+    <color name="color_primary">#00695c</color>
+    <color name="color_primary_light">#439889</color>
+    <color name="color_primary_dark">#003d33</color>
+    <color name="color_primary_background">#036C5B</color>
 </resources>
