--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.TrackMyRun" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Original AppCompat attributes. -->
-        <item name="colorPrimary">@color/md_blue_900</item>
-        <item name="colorSecondary">@color/md_blue_500</item>
-        <item name="android:colorBackground">@color/md_blue_700</item>
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorSecondary">@color/color_primary_light</item>
+        <item name="android:colorBackground">@color/color_primary_background</item>
         <item name="colorError">@color/errorColor</item>
 
         <item name="windowActionBar">false</item>
@@ -13,7 +13,7 @@
         <item name="colorPrimaryVariant">@android:color/white</item>
         <item name="colorSecondaryVariant">@color/md_blue_400</item>
         <!--> toolbar color -->
-        <item name="colorSurface">@color/md_blue_900</item>
+        <item name="colorSurface">@color/color_primary_dark</item>
         <item name="colorOnPrimary">@color/md_blue_50</item>
         <item name="colorOnSecondary">@color/md_blue_50</item>
         <item name="colorOnBackground">@color/md_blue_50</item>
